welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:4: error: not found: value nbpas
	nbpas = nbpas + 1 
        ^