welcome.lessons.welcome.loopfor.LoopFor.scala.code
var nbPas = 0 ;
if(estSurBiscuit==true){
	nbpas = nbpas + 1 
}

while(estSurBiscuit==false){
	for (k <- 1 to nbPas){
		avance();
	}
	prendBiscuit();
	for (k <- 1 to nbPas){
		recule();
	}
	poseBiscuit();
}
